Fix clicking/hover problem on ios

--- a/webapp/src/main/webapp/VAADIN/themes/tori-liferay/categoryview.css
+++ b/webapp/src/main/webapp/VAADIN/themes/tori-liferay/categoryview.css
@@ -13,6 +13,10 @@
 	visibility: visible;
 }
 
+.v-ios .categoryTree .contextmenu {
+	display: none;
+}
+
 .v-link-categoryLink {
 	display: block;
 }
